--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Zhikun Xu (许智锟)"
   pronouns         : # example: "she/her"  
   bio              : "CS PhD Student"
-  location         : "Arizona, US"
+  location         : 
   employer         : "Arizona State University"
   uri              : # URL
   email            : "jeremiah.kunn@gmail.com" 
