--- a/_config.yml
+++ b/_config.yml
@@ -218,7 +218,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  archive:
+  arxiv:
     output: true
     permalink: /:collection/:path/
   portfolio:
