--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "jerrrrykun/jerrrrykun.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "jerry.jpeg"
+  avatar           : "xzk_life.jpg"
   name             : "Zhikun Xu (许智锟)"
   pronouns         : # example: "she/her"  
   bio              : "CS PhD Student"
